custom url shortenign frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,12 +36,25 @@
             </div>
 
         </div>
+
         <div class="mainShortenerBox" id="mainShortenerBox">
             <form action="" class="shortenerInput" id="shortenerInput">
                 <input type="text" class="fullUrl" id="fullUrl" placeholder="Paste your longURL here" required />
                 <button type="submit" class="fullUrlBtn" id="fullUrlBtn">
                     Shrink
                 </button>
+            </form>
+            <br>
+            <p>Custom Url </p>
+            <!-- form for custom URL -->
+            <form action="" class="shortenerInputCustom" id="shortenerInputCustom">
+                <input type="text" class="fullUrlCustom" id="fullUrlCustom" placeholder="Paste your longURL here"
+                    required />
+                <input type="text" class="customUrl" id="customUrl" placeholder="Enter custom alias (optional)" />
+                <button type="submit" class="fullUrlBtnCustom" id="fullUrlBtnCustom">
+                    Shrink Custom
+                </button>
+            </form>
         </div>
         <div class="urlListBox" id="urlListBox">
 
