free server warning

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
             </div>
 
         </div>
-
+        <p style="color: red;">Free servers could take some time initially to work</p>
         <div class="mainShortenerBox" id="mainShortenerBox">
             <form action="" class="shortenerInput" id="shortenerInput">
                 <input type="text" class="fullUrl" id="fullUrl" placeholder="Paste your longURL here" required />
